--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-* {
-  /* border: 1px solid red; */
+body {
+  display: inline-block;
+  width: 100vw;
+  height: 100vh;
 }
