--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,3 +7,9 @@ body {
   width: 100vw;
   height: 100vh;
 }
+
+* {
+  /* box-sizing: border-box; */
+  /* border: 1px solid red; */
+  /* padding: 4px; */
+}
